# Hacktoberfest2021-DSA

./: .gitignore  .project  01_Reverse_Array.cpp  04. Arrays${file_base_name}  1. Two sums.cpp  1. Two sums.txt  10. Container With Most Water.cpp  10. Regular Expression Matching.cpp  11. Sliding Window Maximum.cpp  11. Sliding Window Maximum.txt  12. Sort according to height.cpp  13. Remove Duplicates from Sorted Array.cpp  13. Remove Duplicates from Sorted Array.txt  1579E2.cpp  2. Best time to buy and sell stock.cpp  2. Best time to buy and sell stock.txt  2. Reverse_singular_linked_list.c  2dowhile.cpp  3. Contains Duplicate.cpp  3. Contains Duplicate.txt  388535.cpp  3sum.cpp  4. Product of Array Except Self.cpp  4. Product of Array Except Self.txt  5. Maximum Sum Subarray.cpp  5. Maximum Sum Subarray.txt  6. Maximum Product Subarray.cpp  6. Maximum Product Subarray.txt  6. Minimum Window Substring  7. Encode and Decode Strings  7. Find Minimum in Rotated Sorted Array.cpp  7. Find Minimum in Rotated Sorted Array.txt  70. Climbing Stairs.cpp  8. Search in Rotated Sorted Array.cpp  8. Search in Rotated Sorted Array.txt  9. 3Sum.cpp  9. 3Sum.txt  A-B-C_Sort.cpp  ACII.c  ATM Queue  (+202 more)
01. Mathematics/: 10_exactly 3 divisors.cpp  11_GPterm.cpp  12_Missing-number-in-array.cpp  13_ModularMultiplicativeInverse.cpp  14_primalityTest.cpp  15_QuadraticEquationRoots.cpp  16_Smallestdivisiblenumber.cpp  17_Trailing-zeroes-in-factorial.cpp  18_number_of_spirals.cpp  1_Trailing zeroes in factorial.cpp  20_Conversion_from_Binary_to_Decimal.cpp  20_Euclidean_Algorithm_Basic.cpp  Power.cpp  (+84 more)
(+1423 files in other folders)
